[package]
name = "cli-app"
version = "0.1.0"
authors = ["相田 優希 <51500566+aida0710@users.noreply.github.com>"]
edition = "2018"

[dependencies]
structopt = { version = "0.3.26" }
default-net = { version = "0.22.0" }
pnet = { version = "0.35.0" }
pnet_datalink = { version = "0.35.0" }
raw-socket = { version = "0.0.2" }
